create basic storage system

--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -1,4 +1,4 @@
 bicyclemeter.xcodeproj/xcuserdata
 bicyclemeter.xcodeproj/project.xcworkspace/xcuserdata
-bicyclemeter
 bicyclemeter/BuildConfs.swift
+build
