--- a/reax/ios/Cargo.toml
+++ b/reax/ios/Cargo.toml
@@ -6,6 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base = { path = "../base" }
+storage = { path = "../storage" }
+
+log.workspace = true
+env_logger = "0.10.0"
+
+once_cell.workspace = true
+bincode.workspace = true
+serde = { workspace = true, features = ["derive"] }
+sled.workspace = true
+tokio.workspace = true
+
 
 [lib]
 name = "reax"
