--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -1,4 +1,4 @@
-bicyclemeter.xcodeproj/xcuserdata
-bicyclemeter.xcodeproj/project.xcworkspace/xcuserdata
+bicyclemeter.xcodeproj/xcuserdata/
+bicyclemeter.xcodeproj/project.xcworkspace/xcuserdata/
 bicyclemeter/BuildConfs.swift
-build
+build/
